src/objects/CBFunction__c.object
<CustomObject>
    <fields>
        <fullName>CBAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>CBAccount__c</referenceTo>
        <relationshipLabel>CB Functions</relationshipLabel>
        <relationshipName>CB_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBDivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>CBDivision__c</referenceTo>
        <relationshipLabel>CB Functions</relationshipLabel>
        <relationshipName>CB_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>CB Functions</relationshipLabel>
        <relationshipName>CB_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>CBVariable1__c</referenceTo>
        <relationshipLabel>CB Functions</relationshipLabel>
        <relationshipName>CB_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>CBVariable2__c</referenceTo>
        <relationshipLabel>CB Functions</relationshipLabel>
        <relationshipName>CB_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>CBVariable3__c</referenceTo>
        <relationshipLabel>CB Functions</relationshipLabel>
        <relationshipName>CB_Functions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <displayFormat>A{0000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NFL1__c</fullName>
        <label>NFL1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFL2__c</fullName>
        <label>NFL2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFL3__c</fullName>
        <label>NFL3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFLFormula__c</fullName>
        <label>NFL Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <defaultValue>&apos;Variable&apos;</defaultValue>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Variable</fullName>
                    <default>true</default>
                    <label>Variable</label>
                </value>
                <value>
                    <fullName>NFL</fullName>
                </value>
                <value>
                    <fullName>BLM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CB Function</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>CBDivision__c</columns>
        <columns>CBAccount__c</columns>
        <columns>CBVariable1__c</columns>
        <columns>CBVariable2__c</columns>
        <columns>CBVariable3__c</columns>
        <columns>CBVariable4__c</columns>
        <columns>CBOwner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>